# mini-k8s-demo

./: Dockerfile  Jenkinsfile  flask_fix.sh  pyproject.toml  troubleshoot.sh
app/: Dockerfile  requirements.txt
